# otus-cpp-second-assignment

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  ip_address.cpp  ip_address.h  ip_filter.cpp  test_ip_filter.cpp  test_version.cpp
.github/workflows/: release.yml
include/: ip_address.h
src/: ip_filter.cpp
tests/: CMakeLists.txt  test_ip_filter.cpp
